# rs_robot

./: Cargo.toml  README.md
.cargo/: config.toml
crates/nx_app/: Cargo.toml  README.md  build.rs
crates/nx_app/src/config/: comm_config.toml  robot_config.toml
crates/nx_common/: Cargo.toml
crates/nx_common/src/common/: atomic.rs  bench.rs  graph.rs  interpolate.rs  loop_helper.rs  math.rs  mod.rs  signal_handler.rs  socket_client.rs  socket_server.rs  statistic.rs  string.rs  task.rs  thread.rs  time.rs  transform2d.rs  types.rs
crates/nx_gui/: Cargo.toml  README.md  build.rs
crates/nx_gui/assets/shaders/: instancing.wgsl
crates/nx_gui/config/: bridge_channel_config.toml  bridge_dds_config.toml  bridge_dds_config.xml  bridge_ros_config.toml  dds_config.xml  gui_config.toml  gui_config.xml
crates/nx_gui/examples/: demo.rs  point_cloud_viewer.rs  shaders_example_test.rs
crates/nx_gui/src/: app_builder.rs  lib.rs  shaders.rs
crates/nx_message_center/: Cargo.toml  build.rs  wrapper.h
crates/nx_message_center/examples/: dds_ros_test.rs
crates/nx_message_center/src/: generated.rs  lib.rs
crates/nx_message_center/src/base/: README.md  common_message.rs  message_handler.rs  mod.rs  pointcloud_process.rs  tcc.rs  tiny_alloc.rs
crates/nx_message_center_test/: Cargo.toml  build.rs
crates/nx_practice/: Cargo.toml  build.rs  wrapper.h
crates/nx_practice/src/cpp/: CMakeLists.txt  math_op.cpp  math_op.h
crates/nx_robot/: Cargo.toml
crates/nx_robot/src/: lib.rs
crates/nx_robot/src/base/: README.md  mod.rs  motion_controller.rs  motion_planner.rs  motion_planner_logger.rs  odometry.rs  path_planner.rs
crates/nx_robot/src/simulation/: motor.rs
crates/nx_ros/: Cargo.toml  build.rs  wrapper.h
crates/nx_ros/src/: lib.rs
crates/nx_ros/src/ros/: mod.rs  ros_handler.rs  ros_message.rs  tiny_alloc.rs
