[package]
name = "rust_practice"
version = "0.1.0"
edition = "2021"
#build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rerun = { version = "0.10.0",features = ["web_viewer"] }
#re_viewer = {version = "0.10.0"}


bytes = "1.3"
#anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
#gltf = "1.1"
mimalloc = "0.1"
itertools = "0.11.0"
rand = "0.8.5"
#ndarray = "0.15.6"
socket2 = "0.5.5"
toml = "0.8.6"
signal-hook = "0.3.17"
time = "0.3.30"
tokio = "1.33.0"


[build-dependencies]
bindgen = "0.65.1"
#cc = "1.0"
#cmake = "0.1"


#https://xxchan.me/cs/2023/02/17/optimize-rust-comptime-en.html

[profile.dev]
opt-level = 2
debug = "line-tables-only"
#split-debuginfo = '...'  # Platform-specific.
strip = true
debug-assertions = true
overflow-checks = true
lto = true
panic = 'unwind'
incremental = true
codegen-units = 1
rpath = true



[profile.release]
#opt-level = "z" # oprimize for size
lto = true     #enable link time optimization
codegen-units = 1  #reduce number of codegen units to increase optimization
panic = "unwind"    # abort on panic
strip = true       #automatic strip symbols from the binary
opt-level = 2
incremental = false
debug = "line-tables-only"
rpath = true




[workspace]
members = [ "crates/nx_common",
#    "crates/nx_practice",
    "crates/nx_message_center",
#    "crates/nx_robot",
#    "crates/nx_message_center_test",
    "crates/nx_gui"]

#
#[workspace.dependencies]
#libc = { version = "0.2.153",workspace = true }
#
#itertools = { version = "0.11.0",workspace = true }
##rand = "0.8.5"
##ndarray = "0.15.6"
##socket2 = "0.5.5"
##toml = "0.8.6"
#signal-hook = { version = "0.3.17",workspace = true }
#time = { version = "0.3.30" ,features = ["local-offset"]}
##tokio = "1.33.0"
#spin_sleep = { version = "1.1.1",workspace = true }
##colored = "2.0.4"
#num-traits = { version = "0.2",workspace = true }
##serde = { version ="1.0.190", features = ["derive"] }
#tracing = { version = "0.1.40",workspace = true }
#
#clap = { version = "4.0", features = ["derive"],workspace = true }
#serde = { version ="1.0.190", features = ["derive"],workspace = true }
#socket2 = { version = "0.5.5",workspace = true }