[package]
name = "nx_common"
version = "0.1.0"
edition = "2021"
#build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libc = { version = "0.2.153" }

itertools = { version = "0.11.0" }
rand = "0.8.5"
#ndarray = "0.15.6"
#socket2 = "0.5.5"
#toml = "0.8.6"
signal-hook = { version = "0.3.17" }
time = { version = "0.3.30" ,features = ["local-offset"]}
#tokio = "1.33.0"
spin_sleep = { version = "1.1.1" }
#colored = "2.0.4"
num-traits = { version = "0.2" }
#serde = { version ="1.0.190", features = ["derive"] }
tracing = { version = "0.1.40" }

clap = { version = "4.0", features = ["derive"] }
serde = { version ="1.0.190", features = ["derive"] }
socket2 = { version = "0.5.5" }


#rerun = { version = "0.10.0",features = ["web_viewer"] }
#re_viewer = {version = "0.10.0"}


#bytes = "1.3"
#anyhow = "1.0"
#clap = { version = "4.0", features = ["derive"] }
#gltf = "1.1"
#mimalloc = "0.1"
#itertools = { version = "0.11.0" }
#rand = "0.8.5"
#ndarray = "0.15.6"
#socket2 = { version = "0.5.5" }
#toml = "0.8.6"
#signal-hook = { version = "0.3.17" }
#time = { version = "0.3.30" ,features = ["local-offset"], workspace = true}
#tokio = "1.33.0"
#spin_sleep = { version = "1.1.1" }
#colored = "2.0.4"
#num-traits = { version = "0.2" }
#serde = { version ="1.0.190", features = ["derive"] }
#tracing = { version = "0.1.40" }

#clap = { version = "4.0", features = ["derive"] }
#serde = { version ="1.0.190", features = ["derive"] }

#[build-dependencies]
#bindgen = "0.65.1"
#cc = "1.0"
#cmake = "0.1"


#warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
#[profile.release]
#opt-level = "z" # oprimize for size
#lto = true      #enable link time optimization
#codegen-units = 1  #reduce number of codegen units to increase optimization
#panic = "abort"    # abort on panic
#strip = true       #automatic strip symbols from the binary
#
