
[package]
name = "nx_message_center_test"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
#toml = "0.8.6"
#signal-hook = "0.3.17"
#num-traits = "0.2"
serde = { version ="1.0.190", features = ["derive"] }
tracing = "0.1"
#tracing-subscriber = { version = "0.3", features = ["local-time"] }
#tracing-appender = "0.2.0"
rand = "0.8.5"

#fltk = "^1.4"


nx_common = {path = "../nx_common"}
nx_message_center= {path = "../nx_message_center"}



#[target.x86_64-unknown-linux-gnu]
#rustflags = [
#    "-L" ,"/home/waxz/CLionProjects/libroscpp/cmake-build-release-host/install/lib",
#    "-l", "ros_helper",
#    "-l", "dds_helper_shared",
#    "-l", "tinyalloc",
#    "-l", "tcc_builder",
#    "-C", "link-arg=-Wl,-rpath,$ORIGIN/../lib",
#    "-C", "link-arg=-fuse-ld=gold",
#    "-C", "link-arg=-Wl,-rpath,/home/waxz/CLionProjects/libroscpp/cmake-build-release-host/install/lib"
#]