[package]
name = "nx_practice"
version = "0.1.0"
edition = "2021"
#build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rerun = { version = "0.13.0",features = ["web_viewer"] }
rerun = { version = "0.13.0" }

#re_viewer = {version = "0.13"}
#re_sdk = {version = "0.13"}
#re_ws_comms = {version = "0.13"}
#re_crash_handler = {version = "0.13"}
#re_viewer = {version = "0.13"}
## We need re_sdk_comms to receive log events from and SDK:
#re_sdk_comms = {version = "0.13"}

#bytes = "1.3"
#anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
#gltf = "1.1"
#mimalloc = "0.1"
itertools = "0.11.0"
rand = "0.8.5"
ndarray = "0.15.6"
socket2 = "0.5.5"
toml = "0.8.6"
#signal-hook = "0.3.17"
time = "0.3.30"
tokio = {version = "1.33.0",features = ["full"] }
rayon = "1.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["local-time"] }
tracing-appender = "0.2.2"
#paho-mqtt = "0.12.3"
rumqttc = "0.23.0"
#log = "0.4.20"
spin_sleep = "1.1.1"
base64 = "0.21.5"
#colored = "2.0.4"
num-traits = "0.2"
flo_curves = "0.7.2"
bezier-nd = "0.5"
kurbo = "0.10.4"
#color-eyre = { version = "0.6", default-features = false }
static_assertions = "1.1.0"
figment = "0.10.12"
chrono = "0.4.31"
serde = { version ="1.0.190", features = ["derive"] }
log4rs ={ version = "1.3.0" , features = ["gzip"] }
log = "0.4.20"
#logs-wheel = "0.3.1"
logs-wheel = {path = "../logs-wheel-0.3.1"}
rolling-file = "0.2.0"
#rolling-file = {path = "../rolling-file-0.2.0"}

memmap2 = "0.9.4"
core_affinity = "0.8.1"
affinity = "0.1.2"
libc = "0.2.153"


nx_common = {path = "../nx_common"}
nx_ros = {path = "../nx_ros"}
nx_robot = {path = "../nx_robot"}

[dev-dependencies]
#criterion = {version = "0.5.1", features = ["html_reports"]}

#[[bench]]
#name = "euler1_benchmark"
#harness = false




[build-dependencies]
bindgen = "0.65.1"
cc = "1.0"
cmake = "0.1"


#warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
#[profile.release]
#opt-level = "z" # oprimize for size
#lto = true      #enable link time optimization
#codegen-units = 1  #reduce number of codegen units to increase optimization
#panic = "abort"    # abort on panic
#strip = true       #automatic strip symbols from the binary
